--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = STM32F103RC_btt_512K
 include_dir  = Marlin
 
 #
@@ -187,7 +187,17 @@ extra_scripts      =
   pre:buildroot/share/PlatformIO/scripts/common-cxxflags.py
 build_flags        = -fmax-errors=5 -g -D__MARLIN_FIRMWARE__ -fmerge-all-constants
 lib_deps           =
-
+					LiquidCrystal
+  TMCStepper@>=0.6.2,<1.0.0
+  #Adafruit NeoPixel
+  https://github.com/bigtreetech/Adafruit_NeoPixel
+  U8glib-HAL=https://github.com/MarlinFirmware/U8glib-HAL/archive/bugfix.zip
+  Adafruit_MAX31865=https://github.com/adafruit/Adafruit_MAX31865/archive/1.1.0.zip
+  LiquidTWI2=https://github.com/lincomatic/LiquidTWI2/archive/master.zip
+  Arduino-L6470=https://github.com/ameyer/Arduino-L6470/archive/0.8.0.zip
+  SailfishLCD=https://github.com/mikeshub/SailfishLCD/archive/master.zip
+  SailfishRGB_LED=https://github.com/mikeshub/SailfishRGB_LED/archive/master.zip
+  SlowSoftI2CMaster=https://github.com/mikeshub/SlowSoftI2CMaster/archive/master.zip
 #
 # Feature Dependencies
 #
@@ -1269,19 +1279,6 @@ src_filter    = ${common.default_src_filter} +<src/HAL/TEENSY31_32>
 platform      = teensy
 board         = teensy35
 src_filter    = ${common.default_src_filter} +<src/HAL/TEENSY35_36>
-
-[env:teensy36]
-platform      = teensy
-board         = teensy36
-src_filter    = ${common.default_src_filter} +<src/HAL/TEENSY35_36>
-
-#
-# Teensy 4.0 / 4.1 (ARM Cortex-M7)
-#
-[env:teensy41]
-platform      = teensy
-board         = teensy41
-src_filter    = ${common.default_src_filter} +<src/HAL/TEENSY40_41>
 
 #
 # Native
